# cerefox

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
docs/: TODO.md  e2e-use-cases.md  plan.md  requirements-and-specs.md  solution-design.md
docs/guides/: agent-coordination.md  configuration.md  connect-agents.md  contributing.md  operational-cost.md  ops-scripts.md  quickstart.md  response-limits.md  setup-cloud-run.md  setup-local.md  setup-supabase.md  upgrading.md
docs/research/: gemini-integration.md  oauth-mcp-auth.md  vision.md
docs/specs/: ui-redesign-spa-python-api.md
examples/mcp-configs/: README.md  claude-code-remote.json  claude-desktop-remote.json  cursor-remote.json  local-stdio.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: analytics.ts  audit.ts  dashboard.ts  documents.ts  metadataSearch.ts  projects.ts  search.ts  trash.ts  types.ts
frontend/src/components/: DiffViewer.module.css  DiffViewer.tsx  HEBChart.tsx  HEBOperationChart.tsx  Layout.tsx  MarkdownViewer.module.css  MarkdownViewer.tsx  SearchControls.tsx  SearchResults.tsx  WordCloudChart.tsx
frontend/src/hooks/: useSearch.ts
frontend/src/pages/: AnalyticsPage.tsx  AuditLogPage.tsx  DashboardPage.tsx  DocumentEditPage.tsx  DocumentPage.tsx  IngestPage.tsx  MetadataSearchPage.tsx  ProjectDocumentsPage.tsx  ProjectsPage.tsx  SearchPage.tsx  TrashPage.tsx
frontend/src/utils/: dates.ts  notifications.ts
scripts/: backup_create.py  backup_restore.py  db_deploy.py  db_migrate.py  db_status.py  sync_docs.py
src/cerefox/: __init__.py  cli.py  config.py  mcp_server.py
src/cerefox/api/: app.py  deps.py  routes.py  routes_api.py
src/cerefox/backup/: __init__.py  fs_backup.py
src/cerefox/chunking/: __init__.py  converters.py  markdown.py
src/cerefox/db/: __init__.py  client.py  rpcs.sql  schema.sql
src/cerefox/db/migrations/: 0001_initial_schema.sql  0002_metadata_keys_to_dynamic.sql  0003_add_document_versions.sql  0004_add_audit_log_review_status_archived.sql  0005_metadata_search.sql  0006_usage_log.sql  0007_usage_log_requestor.sql  0008_soft_delete.sql  0009_audit_log_restore_operation.sql  0010_requestor_enforcement_config.sql  0011_hub_messages.sql
src/cerefox/embeddings/: __init__.py  base.py  cloud.py  mpnet.py  ollama_embed.py
src/cerefox/ingestion/: __init__.py  pipeline.py
src/cerefox/retrieval/: __init__.py  search.py
supabase/functions/cerefox/: embeddings.ts  index.ts  shared.ts
supabase/functions/cerefox-get-audit-log/: index.ts
supabase/functions/cerefox-get-document/: index.ts
supabase/functions/cerefox-ingest/: index.ts
supabase/functions/cerefox-list-projects/: index.ts
supabase/functions/cerefox-list-versions/: index.ts
supabase/functions/cerefox-mcp/: embeddings.ts  index.ts  shared.ts
supabase/functions/cerefox-mcp/tools/: audit-log.ts  get-document.ts  ingest.ts  list-projects.ts  list-versions.ts  metadata-search.ts  metadata.ts  search.ts
supabase/functions/cerefox-metadata/: index.ts
supabase/functions/cerefox-metadata-search/: index.ts
supabase/functions/cerefox-search/: index.ts
supabase/functions/cerefox/tools/: audit-log.ts  get-document.ts  ingest.ts  list-versions.ts  metadata.ts  search.ts
supabase/functions/message-hub-mcp/: README.md  index.ts
test-data/: README.md  ancient-rome.md  cerefox-overview.md  creative-worldbuilding.md  espresso-guide.md  knowledge-management.md  python-concurrency.md
tests/: conftest.py  test_cli.py  test_config.py  test_db_client.py  test_mcp_server.py
tests/api/: test_routes.py
tests/chunking/: test_converters.py  test_markdown.py
tests/db/: test_audit_and_governance.py  test_versioning.py
tests/e2e/: conftest.py  test_api_e2e.py  test_consolidated_e2e.py  test_edge_functions_e2e.py  test_mcp_e2e.py  test_message_hub_e2e.py  test_ui_e2e.py
tests/embeddings/: test_embedders.py
tests/ingestion/: test_backup.py  test_pipeline.py
tests/retrieval/: test_search.py
web/templates/: base.html  browser.html  dashboard.html  document.html  edit.html  ingest.html  macros.html  project_edit.html  projects.html  settings.html
web/templates/partials/: document_chunks.html  document_content.html  filename_check.html  ingest_result.html  search_results.html  update_result.html
