[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerefox"
version = "0.1.0"
description = "Personal second brain: cloud knowledge backend with MCP access for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cerefox = "cerefox.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cerefox"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Supabase/Postgres connection (skipped by default)",
]
addopts = "-m 'not integration'"
