[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerefox"
version = "0.1.0"
description = "Personal second brain: cloud knowledge backend with MCP access for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
mpnet = [
    "sentence-transformers>=2.7.0",
    # PyTorch dropped Intel Mac (x86_64) wheels in 2.3.0.
    # This pin covers Python <=3.12 on Intel Mac; torch 2.2.x has cp311/cp312 wheels.
    # Python 3.13 + Intel Mac: no torch wheel exists — use Ollama embeddings instead.
    "torch<2.3.0; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.13'",
]
ollama = []  # httpx is already a core dep; listed for discoverability
all = [
    "sentence-transformers>=2.7.0",
    "torch<2.3.0; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.13'",
]

[project.scripts]
cerefox = "cerefox.cli:cli"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cerefox"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Supabase/Postgres connection (skipped by default)",
]
addopts = "-m 'not integration'"
