[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerefox"
version = "0.1.0"
description = "Personal second brain: cloud knowledge backend with MCP access for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# No optional deps for embeddings — CloudEmbedder uses httpx (already a core dep).
# File format converters are still optional:
pdf = ["pypdf>=4.0.0"]
docx = ["python-docx>=1.1.0"]
converters = ["pypdf>=4.0.0", "python-docx>=1.1.0"]

[project.scripts]
cerefox = "cerefox.cli:cli"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cerefox"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Supabase/Postgres connection (skipped by default)",
    "e2e: end-to-end tests against a live Supabase instance (skipped by default, run with -m e2e)",
    "ui: UI end-to-end tests via Playwright (skipped by default, run with -m ui)",
]
addopts = "-m 'not integration and not e2e and not ui'"
